(fix) Fixed navbar and content overlapping
  - The background image is set on body, has to be overrided in other
    pages in their respective css files.

--- a/client/styles/profile.css
+++ b/client/styles/profile.css
@@ -1,3 +1,8 @@
+body {
+  /** override body background image shown on front page **/
+  background-image: url();
+}
+
 h1 {
   font-size: 4em;
 }
@@ -10,4 +15,6 @@ h1 {
   padding-bottom: 10px;
 }
 
-
+.profile-body {
+  margin-top: 20px;
+}
