--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -2,10 +2,13 @@ html, body,
 body>div:first-of-type {
   width: 100%;
   height: 100%;
-  background-color: #ededed;
   font-family: 'helvetica neue', sans-serif;
 }
 
 body {
+  background-image: url(../assets/background.jpg);
+}
+
+body>div:first-of-type {
   padding-top: 70px;
 }
